--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="MFa-Xi-QTw">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="MFa-Xi-QTw" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="414" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MFa-Xi-QTw" id="A4e-e7-hW4">
@@ -108,6 +108,12 @@ Location</string>
                                         <constraint firstItem="JKp-Nz-Mkn" firstAttribute="leading" secondItem="A4e-e7-hW4" secondAttribute="leadingMargin" id="qwu-4x-Msv"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="u7J-92-O27" id="03H-8C-yrD"/>
+                                    <outlet property="feedImageView" destination="j4a-Q0-D34" id="fBH-7y-0Bx"/>
+                                    <outlet property="locationContainer" destination="wvL-88-RVb" id="1Wn-7q-gxP"/>
+                                    <outlet property="locationLabel" destination="Fxe-Kk-AZ8" id="xa8-Hg-lkC"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
