--- a/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -15,29 +15,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="KKh-PY-dib">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="16"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="KKh-PY-dib" customClass="ErrorView" customModule="EssentialFeediOS" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeS-6p-7oR">
-                                    <rect key="frame" x="152" y="-7" width="46" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Button"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeS-6p-7oR">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <inset key="contentEdgeInsets" minX="0.0" minY="9" maxX="0.0" maxY="8"/>
+                                    <state key="normal" title="Error label">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
                                     <connections>
-                                        <action selector="hideErrorView" destination="C4L-nX-POP" eventType="touchUpInside" id="l3g-Bf-Ccs"/>
+                                        <action selector="hideMessage" destination="KKh-PY-dib" eventType="touchUpInside" id="M5N-p7-6Z4"/>
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" red="0.86249360584077384" green="0.37440461499642447" blue="0.37440461499642447" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="zeS-6p-7oR" secondAttribute="bottom" id="9q4-Mq-svW"/>
+                                <constraint firstItem="zeS-6p-7oR" firstAttribute="top" secondItem="KKh-PY-dib" secondAttribute="top" id="X8D-eY-mSY"/>
+                                <constraint firstItem="zeS-6p-7oR" firstAttribute="leading" secondItem="KKh-PY-dib" secondAttribute="leading" id="Y8W-X8-1Gf"/>
+                                <constraint firstAttribute="trailing" secondItem="zeS-6p-7oR" secondAttribute="trailing" id="qUJ-qv-hb1"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="button" destination="zeS-6p-7oR" id="rkA-DO-Eye"/>
+                            </connections>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="hRz-l3-jV2">
-                            <rect key="frame" x="0.0" y="645.00000034679067" width="414" height="16"/>
+                            <rect key="frame" x="0.0" y="663.00000034679067" width="414" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="vEt-qu-gSY" customClass="FeedImageCell" customModule="EssentialFeediOS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="40.5" width="414" height="580"/>
+                                <rect key="frame" x="0.0" y="58.5" width="414" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vEt-qu-gSY" id="grp-Yu-lCB">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="580"/>
@@ -152,7 +163,7 @@ Location</string>
                         </connections>
                     </refreshControl>
                     <connections>
-                        <outlet property="errorView" destination="zeS-6p-7oR" id="2F1-rG-09S"/>
+                        <outlet property="errorView" destination="KKh-PY-dib" id="iRi-NX-CqX"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yAD-oi-8uG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
